--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -5815,79 +5815,235 @@ button.close {
     display: none !important; } }
 
 body {
-  font-family: 'open-sans', sans-serif; }
+  font-family: 'open-sans', sans-serif;
+  height: 5000px; }
 
-#background {
-  background: #2c2b29;
-  /* For browsers that do not support gradients */
-  background: -webkit-linear-gradient(right top, #2c2b29, #706d69);
-  /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(top right, #2c2b29, #706d69);
-  /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(top right, #2c2b29, #706d69);
-  /* For Firefox 3.6 to 15 */
-  background: linear-gradient(to top right, #2c2b29, #706d69);
-  /* Standard syntax */
-  height: 100vh;
-  width: 100vw;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: -1; }
-
-header {
-  height: 55vh; }
-  header .logo {
-    display: block;
-    margin: 40vh auto 0; }
-
-#about {
-  height: 1000px; }
-
-.overlay-container {
-  display: inline-block;
-  position: relative; }
-  .overlay-container .overlay-image {
+#hero1 {
+  background: url("../images/raintech-header-blue.png");
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
+  height: 100vh; }
+  #hero1 img {
     position: absolute;
-    top: 0;
+    top: 35%;
+    left: 25%; }
+
+#hero2 {
+  background: url("../images/light.jpeg");
+  background-size: auto;
+  background-position: center center;
+  background-attachment: fixed; }
+
+.background {
+  position: relative;
+  width: 100%; }
+
+#about .content {
+  height: 410px;
+  position: relative;
+  overflow: hidden;
+  background-color: #fff;
+  -webkit-transition: background-color 0.4s;
+  -ms-transition: background-color 0.4s;
+  -moz-transition: background-color 0.4s;
+  -o-transition: background-color 0.4s;
+  transition: background-color 0.4s; }
+  #about .content .inner {
+    position: absolute;
+    bottom: 100px;
     left: 0;
-    height: 100%;
-    width: 100%;
-    background: #000;
-    opacity: 0; }
-    .overlay-container .overlay-image span {
-      font-size: 3em;
-      position: absolute;
-      top: 45%;
-      left: 25%;
-      color: #fff;
-      font-weight: 100;
-      letter-spacing: 1px; }
-  .overlay-container .overlay-image:hover {
-    opacity: 0.8; }
-
-.section-divider {
-  line-height: 0.5;
-  text-align: center;
-  margin: 100px 0; }
-  .section-divider span {
+    right: 0;
+    margin: auto;
+    -webkit-transition: transform 0.4s;
+    -ms-transition: transform 0.4s;
+    -moz-transition: transform 0.4s;
+    -o-transition: transform 0.4s;
+    transition: transform 0.4s; }
+    #about .content .inner img {
+      display: block;
+      margin: 0 auto;
+      height: 125px;
+      -webkit-transition: transform 0.4s;
+      -ms-transition: transform 0.4s;
+      -moz-transition: transform 0.4s;
+      -o-transition: transform 0.4s;
+      transition: transform 0.4s; }
+    #about .content .inner span {
+      margin-top: 50px;
+      display: block;
+      text-align: center;
+      font-weight: 500;
+      font-size: 1.3em;
+      -webkit-transition: transform 0.4s;
+      -ms-transition: transform 0.4s;
+      -moz-transition: transform 0.4s;
+      -o-transition: transform 0.4s;
+      transition: transform 0.4s; }
+  #about .content .toggle {
     color: #fff;
-    display: inline-block;
-    position: relative;
-    font-weight: 100;
-    font-size: 1.1em; }
-  .section-divider span:before, .section-divider span:after {
-    content: "";
     position: absolute;
-    height: 5px;
-    border-bottom: 1px solid white;
-    top: 0;
-    width: 250px; }
-  .section-divider span:before {
-    right: 100%;
-    margin-right: 30px; }
-  .section-divider span:after {
-    left: 100%;
-    margin-left: 30px; }
+    background-color: #ffa64d;
+    bottom: 0;
+    height: 200px;
+    padding: 30px;
+    text-align: center;
+    font-weight: 300;
+    line-height: 1.5em;
+    font-size: 1.5em;
+    -webkit-transform: translateY(100%);
+    -ms-transform: translateY(100%);
+    -moz-transform: translateY(100%);
+    -o-transform: translateY(100%);
+    transform: translateY(100%);
+    -webkit-transition: transform 0.4s;
+    -ms-transition: transform 0.4s;
+    -moz-transition: transform 0.4s;
+    -o-transition: transform 0.4s;
+    transition: transform 0.4s; }
+
+#about .content:hover {
+  background-color: #ffa64d; }
+  #about .content:hover .inner img {
+    -webkit-transform: translateY(-80px);
+    -ms-transform: translateY(-80px);
+    -moz-transform: translateY(-80px);
+    -o-transform: translateY(-80px);
+    transform: translateY(-80px); }
+  #about .content:hover .inner span {
+    -webkit-transform: translateY(-100px);
+    -ms-transform: translateY(-100px);
+    -moz-transform: translateY(-100px);
+    -o-transform: translateY(-100px);
+    transform: translateY(-100px); }
+  #about .content:hover .toggle {
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    -moz-transform: translateY(0);
+    -o-transform: translateY(0);
+    transform: translateY(0); }
+
+#about-us {
+  margin-top: 70px;
+  margin-bottom: 70px; }
+  #about-us p {
+    text-align: justify;
+    font-size: 2em;
+    padding: 50px;
+    line-height: 1.8em;
+    font-weight: 300; }
+
+#projects .image-container {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); }
+  #projects .image-container img {
+    width: 100%; }
+
+.intersection {
+  text-align: center;
+  color: #fff; }
+
+.no-padding {
+  padding: 0; }
+
+.overlay {
+  height: 350px;
+  background-color: rgba(51, 153, 255, 0.4);
+  position: relative; }
+  .overlay .text {
+    position: absolute;
+    top: 40%;
+    width: 100%;
+    font-size: 4em; }
+
+.push-down-100 {
+  margin-top: 100px; }
+
+.center-block {
+  display: block;
+  margin-left: auto;
+  margin-right: auto; }
+
+h2 {
+  text-align: center;
+  font-size: 3em;
+  font-weight: 300; }
+
+#about .content .inner .phone-icon, #about .content .inner .mac-icon, #about .content .inner .system-icon, #about .content .inner .responsive-icon {
+  display: block;
+  margin: 0 auto;
+  height: 125px;
+  -webkit-transition: transform 0.4s;
+  -ms-transition: transform 0.4s;
+  -moz-transition: transform 0.4s;
+  -o-transition: transform 0.4s;
+  transition: transform 0.4s; }
+
+#about .content .inner .phone-icon {
+  background: url("../icons/phone.png");
+  background-position: center center;
+  background-size: auto 125px;
+  background-repeat: no-repeat; }
+
+#about .content .inner .mac-icon {
+  background: url("../icons/mac.png");
+  background-position: center center;
+  background-size: auto 125px;
+  background-repeat: no-repeat; }
+
+#about .content .inner .system-icon {
+  background: url("../icons/system.png");
+  background-position: center center;
+  background-size: auto 125px;
+  background-repeat: no-repeat; }
+
+#about .content .inner .responsive-icon {
+  background: url("../icons/responsive.png");
+  background-position: center center;
+  background-size: auto 125px;
+  background-repeat: no-repeat; }
+
+#about .content:hover .phone-icon {
+  background: url("../icons/phone-white.png");
+  background-position: center center;
+  background-size: auto 125px;
+  background-repeat: no-repeat;
+  -webkit-transform: translateY(-80px);
+  -ms-transform: translateY(-80px);
+  -moz-transform: translateY(-80px);
+  -o-transform: translateY(-80px);
+  transform: translateY(-80px); }
+
+#about .content:hover .mac-icon {
+  background: url("../icons/mac-white.png");
+  background-position: center center;
+  background-size: auto 125px;
+  background-repeat: no-repeat;
+  -webkit-transform: translateY(-80px);
+  -ms-transform: translateY(-80px);
+  -moz-transform: translateY(-80px);
+  -o-transform: translateY(-80px);
+  transform: translateY(-80px); }
+
+#about .content:hover .system-icon {
+  background: url("../icons/system-white.png");
+  background-position: center center;
+  background-size: auto 125px;
+  background-repeat: no-repeat;
+  -webkit-transform: translateY(-80px);
+  -ms-transform: translateY(-80px);
+  -moz-transform: translateY(-80px);
+  -o-transform: translateY(-80px);
+  transform: translateY(-80px); }
+
+#about .content:hover .responsive-icon {
+  background: url("../icons/responsive-white.png");
+  background-position: center center;
+  background-size: auto 125px;
+  background-repeat: no-repeat;
+  -webkit-transform: translateY(-80px);
+  -ms-transform: translateY(-80px);
+  -moz-transform: translateY(-80px);
+  -o-transform: translateY(-80px);
+  transform: translateY(-80px); }
 
 /*# sourceMappingURL=styles.css.map */
