--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,3 +1,5 @@
 @import "../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap";
 @import "./partials/mixins";
 @import "./partials/custom";
+@import "./partials/icons";
+@import "./partials/variables";
