--- a/views/index.pug
+++ b/views/index.pug
@@ -1,20 +1,80 @@
 extends ./layouts/layout
 
 block content
-	#background
-	header
-		img.logo(src="images/logo-text-border.png")
-	.section-divider
-		span OM RAINTECH
-	#about.container-fluid
-		.overlay-container
-			img(src="images/app.jpg")
-			.overlay-image
-				span APPUTVIKLING
-			
-		.overlay-container
-			img(src="images/web.jpeg")
-			.overlay-image
-				span WEBUTVIKLING
-	
+	header#hero1.background
+		img(src="images/logo-text-border.png")
+	#about
+		.container-fluid
+			.row
+				.col-md-3.no-padding
+					.content
+						.inner
+							.phone-icon
+							span APPUTVIKLING
+						span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image.
 
+				.col-md-3.no-padding
+					.content
+						.inner
+							.mac-icon
+							span WEBUTVIKLING
+						span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image.
+				.col-md-3.no-padding
+					.content
+						.inner
+							.system-icon
+							span WEBAPPLIKASJONER
+						span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image.
+				.col-md-3.no-padding
+					.content
+						.inner
+							.responsive-icon
+							span SEO
+						span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image.
+			.row
+				.col-md-3.no-padding
+					.content
+						.inner
+							.phone-icon
+							span APPUTVIKLING
+						span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image.
+
+				.col-md-3.no-padding
+					.content
+						.inner
+							.mac-icon
+							span WEBUTVIKLING
+						span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image.
+				.col-md-3.no-padding
+					.content
+						.inner
+							.system-icon
+							span WEBAPPLIKASJONER
+						span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image.
+				.col-md-3.no-padding
+					.content
+						.inner
+							.responsive-icon
+							span SEO
+						span.toggle Shaping a creative identity, rich and versatile. Enhance your corporate image.
+	#hero2.intersection
+		.overlay
+			.text
+				p VI SETTER <span style="color: #ffa64d;">IDÈER</span> UT I LIVE.
+	#about-us.container
+		.center-block
+			h2 HVEM ER <span style="color: #ffa64d;">VI</span>
+			p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur venenatis quam at urna aliquam, varius blandit massa molestie. Aliquam sit amet lacinia ligula. Proin interdum risus arcu, et aliquet risus mattis tincidunt. Duis erat ligula, iaculis eu aliquet non, tempor a 			| metus. Sed pharetra erat sed finibus euismod. Morbi et diam libero. Ut non pharetra tortor. Nullam scelerisque ante ac augue finibus suscipit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+	
+	#projects
+		h2 HVA VI HAR <span style="color: #ffa64d;">JOBBET</span> MED
+		.container.push-down-100
+			.row
+				.col-md-6
+					.center-block
+						.image-container
+							img(src="images/hoban.png")
+				.col-md-6
+					.center-block
+						.image-container
+							img(src="images/blueways.png")
