--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,5 +1,7 @@
 @import "../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap";
 @import "./partials/mixins";
-@import "./partials/custom";
-@import "./partials/icons";
 @import "./partials/variables";
+@import "./partials/custom";
+@import "./partials/navbar";
+@import "./partials/icons";
+@import "./partials/background";
