--- a/src/sass/partials/_mixins.scss
+++ b/src/sass/partials/_mixins.scss
@@ -1,9 +1,9 @@
 @mixin diagonal-gradient($color1, $color2) {
-    background: $color1; /* For browsers that do not support gradients */
-    background: -webkit-linear-gradient(right top, $color1, $color2); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(top right, $color1, $color2); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(top right, $color1, $color2); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(to top right, $color1, $color2); /* Standard syntax */
+    background: $color1; 
+    background: -webkit-linear-gradient(right top, $color1, $color2); 
+    background: -o-linear-gradient(top right, $color1, $color2); 
+    background: -moz-linear-gradient(top right, $color1, $color2); 
+    background: linear-gradient(to top right, $color1, $color2); 
 }
 
 $transition-duration: 0.4s;
@@ -33,8 +33,21 @@ $transition-duration: 0.4s;
     transition: background-color $transition-duration;
 }
 
-@mixin background-props() {
+@mixin icon-props($icon-height) {
     background-position:center center;
-    background-size: auto 125px;
+    background-size: auto $icon-height;
     background-repeat: no-repeat;
+}
+
+@mixin background-props() {
+    background-size:cover;
+    background-position:center center;
+    background-attachment:fixed;
+}
+
+@mixin listcolumns($number) {
+    columns: $number;
+    -webkit-columns: $number;
+    -moz-columns: $number;
+    -o-columns: $number;
 }
